[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0"
borsh = "1.5.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
bytemuck = { version = "1.19.0", features = ["derive", "const_zeroed"] } 
bs58 = "0.5.1"
five8_const = "0.1.3"
five8 = "0.2.1"

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "2.0.14"
spl-token = "6.0.0"

