[package]
name = "native-fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive", "const_zeroed"] } 
five8_const = "0.1.3"
five8 = "0.2.1"
pinocchio = "0.6.0"
pinocchio-system = "0.2.0"
pinocchio-token = "0.2.0"

[dev-dependencies]
mollusk-svm = "0.0.8"
solana-sdk = "2.1.0"
spl-token = "7.0.0"

